Finished basic AppDbContext, added props to models, first migration

--- a/src/RecantosSystem.Api/appsettings.json
+++ b/src/RecantosSystem.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;User=root;Password=1234;Database=RecantosSystem"
+},
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
