Added JwtBearer/Swagger authentication

--- a/src/RecantosSystem.Api/appsettings.json
+++ b/src/RecantosSystem.Api/appsettings.json
@@ -1,8 +1,15 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;User=root;Password=1234;Database=RecantosSystem"
-},
-
+  },
+  "Jwt": {
+    "Key": "jesusismysaviorandmygod"
+  },
+  "TokenConfiguration": {
+    "Audience": "Genesis_Audience",
+    "Issuer": "Genesis_Issuer",
+    "ExpireHours": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
