--- a/src/RecantosSystem.Api/Properties/launchSettings.json
+++ b/src/RecantosSystem.Api/Properties/launchSettings.json
@@ -23,6 +23,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "netAddress": "http://10.0.10.250:5001;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
